# pad-path

./: .appveyor.yml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile.toml  README.md  flake.nix
.cargo/: config.toml
docs/: development.md
src/: cli.rs  main.rs  path.rs
src/cli/: mod.rs
src/path/: add.rs  clean.rs  history.rs  mod.rs  priority.rs  read.rs  remove.rs  revert.rs  write.rs
