[package]
name = "pad-path"
version = "0.2.2"
authors = ["James Hawley <developer@jrhawley.ca>"]
edition = "2021"
description = "Intuitively modify your `$PATH`"
license = "MIT"
repository = "https://github.com/jrhawley/pad-path/"
homepage = "https://github.com/jrhawley/pad-path/"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "path"]
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
home = "0.5"
itertools = "0.9"
rev_lines = "0.2"
structopt = "0.3"

[[bin]]
name = "pad"
path = "src/main.rs"
